--- a/a/autoconf2.64/package.xml
+++ b/a/autoconf2.64/package.xml
@@ -12,10 +12,10 @@
         <sources>
             <file src="autoconf2.64-2.64+dfsg.tar.gz" subdir="sources"
                 sha256sum="9fce101dfe4705bd807d319818312a5c7755109d0bd47e233e03265e3fd70eba"/>
-            <file src="patches.01.tar.gz" subdir="patches"
-                sha256sum="b04502612808193cb08426aaeaf3b861261f30b25f9465ed9431cae0c2ca1925"/>
+            <file src="debian-patches-1.tar.gz" subdir="patches"
+                sha256sum="0f00dd687d99ca205fcab5927c03ef539bddbe0e6e2f532ab78f8d33e810071b"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <file src="patches/02_autoreconf-aclocal.diff"/>
