--- a/u/libunistring/package.xml
+++ b/u/libunistring/package.xml
@@ -14,18 +14,18 @@
         </description>
 
         <sources>
-            <file src="libunistring-0.9.6+really0.9.3.tar.gz" subdir="sources"
-                sha256sum="610d3ec724fbdaa654afe3cff20b9f4d504be3fd296fded2e0f7f764041006a3"/>
-            <file src="patches.0.1.tar.gz" subdir="patches"
-                sha256sum="ea7c3f622207d755eb62fc3cd53845dc0c4d55c1a52fca1b8b203aae84441004"/>
-            <file src="bolt.2.tar.gz" subdir="patches"
-                sha256sum="62bc79a3614c79fd891597357af3f46d4d5cd8203f98a63eb884b5726f2f08a0"/>
+            <file src="libunistring-0.9.10.tar.xz" subdir="sources"
+                sha256sum="eb8fb2c3e4b6e2d336608377050892b54c3c983b646c561836550863003c05d7"/>
+            <file src="debian-patches-1.tar.gz" subdir="patches"
+                sha256sum="28114ab297d6fbcb7fe99da53c2c548be993425ab83ed5221052627365dbe484"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
-                <file src="patches/float-endian-detection.patch"/>
-                <file src="patches/update-fseterr-h.patch"/>
+                <file src="patches/0100-float-endian-detection.patch"/>
+                <!--
+                <file src="patches/0700-multiarch-libc.patch"/>
+                -->
             </patchset>
         </patches>
 
