--- a/p/pkg-config/package.xml
+++ b/p/pkg-config/package.xml
@@ -17,7 +17,15 @@
         <sources>
             <file src="pkg-config-0.29.tar.gz" subdir="sources"
                 sha256sum="c8507705d2a10c67f385d66ca2aae31e81770cc0734b4191eb8c489e864a006b"/>
+            <file src="pkg-config-0.29-6.debdiff.gz" subdir="patches"
+                sha256sum="c06146d878fb7faa4ac3edb5e45188b184cc650a752384d5c1053f41edf590bc"/>
         </sources>
+
+        <patches>
+            <patchset subdir="sources">
+                <file src="patches/pkg-config-0.29-6.debdiff"/>
+            </patchset>
+        </patches>
 
         <requires>
             <package name="libglib2.0-dev"/>
