--- a/n/nss/package.xml
+++ b/n/nss/package.xml
@@ -12,23 +12,19 @@
         </description>
 
         <sources>
-            <file src="nss-3.26.2.tar.gz" subdir="sources"
-                sha256sum="13a40a2f97edf5fab3d4c7fdd928e77df36dc539cd8354b6b5d79ab93a131a5a"/>
-            <file src="patches.01.tar.gz" subdir="patches"
-                sha256sum="3901f4cadcdd01cc98ba2ffd7cdf1d410c8ce78631aee706b27fedf589aafc72"/>
-            <file src="patches.bolt.tar.gz" subdir="patches"
-                sha256sum="d2e74b41705d5b896ee51e4cf6df16c027dfd62560c041db0140147c56a6178b"/>
+            <file src="nss-3.42.1.tar.gz" subdir="sources"
+                sha256sum="087db37d38fd49dfd584dd2a8b5baa7fc88de7c9bd97c0c2d5be4abcafc61fc6"/>
+            <file src="debian-patches-1.tar.gz" subdir="patches"
+                sha256sum="40d0d43e1df94b6d27095f823a0f36eb0ad76cafe4630ff460bca2927e43e7e0"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
+                <!-- Debian -->
                 <file src="patches/38_hurd.patch"/>
-                <file src="patches/38_kbsd.patch"/>
                 <file src="patches/80_security_tools.patch"/>
                 <file src="patches/85_security_load.patch"/>
                 <file src="patches/38_hppa.patch"/>
-                <!-- Bolt OS -->
-                <file src="patches/fix-ssl-loopback-ut-uninit-var.diff"/>
             </patchset>
         </patches>
 
